--- a/_posts/2018-11-12-haptics.md
+++ b/_posts/2018-11-12-haptics.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Deriving contact forces in simulation"
+title:  "Deriving force feedback & collision in simulation"
 date:   2018-11-12
 categories: [rl]
 description: My experience with haptics interface in a simulated environment.
