--- a/_posts/2018-11-12-haptics.md
+++ b/_posts/2018-11-12-haptics.md
@@ -7,4 +7,4 @@ description: My experience with haptics interface in a simulated environment.
 tags: force feedback, gazebo, collision models, contact forces, novint falcon,
 ---
 ## Why this post?
-While working on a machine learning project of mine, I recently came across a very simple but rather very complicated problem. By simple, I meant for us humans it would be a very trivial task but the same could not be in the case of a robot, especially a simulated one.  
+While working on a machine learning project of mine, I recently came across a very simple but rather very complex problem. By "<strong>simple</strong>" I meant, for us <strong>humans</strong> it would be a very trivial task. But the same could not be said in the case of a robot, especially a <strong>simulated one</strong>.  
