--- a/_posts/2018-11-12-haptics.md
+++ b/_posts/2018-11-12-haptics.md
@@ -7,4 +7,6 @@ description: My experience with haptics interface in a simulated environment.
 tags: force feedback, gazebo, collision models, contact forces, novint falcon,
 ---
 ## Why this post?
+<p style="text-align:justify">
 While working on a machine learning project of mine, I recently came across a very simple but rather very complex problem. By "<strong>simple</strong>" I meant, for us <strong>humans</strong> it would be a very trivial task. But the same could not be said in the case of a robot, especially a <strong>simulated one</strong>.  
+</p>
