--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -11,5 +11,5 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="text-align:justify">Walking is a very basic and indispensable action that is embedded in our daily life. We need to walk to traverse from one place to another. Although it seems to be obvious and too simple, its importance and the level of complexity is taken for granted quite often.</p>
 <p style="text-align:justify">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
 
-## What's this blog about?
+## A brief history of how we landed with RL:
 <p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of robot-learning for applications related to walking robots. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability. Initially we decided to take a classical approach of canonical walking patterns particularly inspired by the works of  <a href="http://ames.gatech.edu/" class="md-link"> Dr. Aron D Ames</a> and his team at <a href="https://www.gatech.edu/" class="md-link">Georgia Tech</a> & AMBER Lab at Caltech. related to <a href="http://ames.gatech.edu/ijbbr_2014.pdf" class="md-link">human inspired walking frameworks</a> for bipedal walking robots.</p>
