--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -12,6 +12,12 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="text-align:justify">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
 
 ## History:
-<p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability. Our initial approaches were inclined towards the classical approach of <strong>canonical walking functions</strong>, particularly inspired by the works of <a href="http://ames.gatech.edu/" class="md-link"> Dr. Aron D Ames</a> and his team at <a href="https://www.gatech.edu/" class="md-link">Georgia Tech</a> & <a href="http://www.bipedalrobotics.com/" class="md-link">AMBER Lab at Caltech</a>, related to <a href="http://ames.gatech.edu/ijbbr_2014.pdf" class="md-link">human inspired walking</a> frameworks for bipedal walking robots. The method utilises the human walking outputs as reference while modelling controllers to generate human gait patterns.</p>
+<p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
 
-<img class="blog-img" src="{{ site.github.url }}/media/blog/human_inputs.png" />
+<div class="col-md-6">
+    <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png" />
+</div>
+<div class="col-md-6">
+    <h3 class="rtitle">Bipedal walking robot using Deep Deterministic Policy Gradient</h3>
+    <p style="text-align:justify">Our initial approaches were inclined towards the classical approach of <strong>canonical walking functions</strong>, particularly inspired by the works of <a href="http://ames.gatech.edu/" class="md-link"> Dr. Aron D Ames</a> and his team at <a href="https://www.gatech.edu/" class="md-link">Georgia Tech</a> & <a href="http://www.bipedalrobotics.com/" class="md-link">AMBER Lab at Caltech</a>, related to <a href="http://ames.gatech.edu/ijbbr_2014.pdf" class="md-link">human inspired walking</a> frameworks for bipedal walking robots. The method utilises the human walking outputs as reference while modelling controllers to generate human gait patterns.</p>
+</div>
