--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -15,7 +15,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
 
 <div class="container-fluid">
-
+  <div class="row">
   <div class="col-md-6">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
   </div>
@@ -27,4 +27,20 @@ tags: reinforcement learning, ddpg, bipedal walking,
         <a href="https://arxiv.org/abs/1801.05086" class="md-link btn-default btn rbtn">paper</a>
         <a href="https://www.youtube.com/watch?v=SDqPfhUeoCo&feature=youtu.be" class="md-link btn-default btn rbtn">video</a> -->
    </div>
-</div>
+   </div>
+   </div>
+
+   <!-- <div class="container-fluid">
+
+       <div class="col-md-6">
+           <img class="rimg" src="{{ site.github.url }}/media/drone_qlearning.gif" />
+       </div>
+       <div class="col-md-6">
+           <h3 class="rtitle">Q-Learning for autonomous navigation of UAVs in indoor environments.</h3>
+           <p style="text-align:justify">
+           Indoor Path Planning and Navigation of an Unmanned Aerial Vehicle (UAV) based on simple <strong>PID control+Q-Learning algorithm</strong> (Reinforcement Learning). The quadrotor manoeuvres towards the goal point, along the uniform grid distribution(5X5) in the simulation environment[discrete action space] based on the specified reward policy, backed by the simple position based PID tuned controller.
+           </p>
+           <a href="https://github.com/nav74neet/rl_ardrone" class="md-link btn-default btn rbtn">code</a>
+           <a href="https://arxiv.org/abs/1801.05086" class="md-link btn-default btn rbtn">paper</a>
+           <a href="https://www.youtube.com/watch?v=SDqPfhUeoCo&feature=youtu.be" class="md-link btn-default btn rbtn">video</a>
+      </div> -->
