--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -15,6 +15,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
 
 <div class="container-fluid">
+  <div class="row">
   <div class="col-md-6">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
   </div>
@@ -26,7 +27,8 @@ tags: reinforcement learning, ddpg, bipedal walking,
         <a href="https://arxiv.org/abs/1801.05086" class="md-link btn-default btn rbtn">paper</a>
         <a href="https://www.youtube.com/watch?v=SDqPfhUeoCo&feature=youtu.be" class="md-link btn-default btn rbtn">video</a> -->
    </div>
-</div>
+   </div>
+   </div>
 
    <!-- <div class="container-fluid">
 
