--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -7,11 +7,11 @@ description: Bipedal walking using Deep Deterministic Policy Gradient.
 tags: reinforcement learning, ddpg, bipedal walking,
 ---
 
-## Intro:  
+## Intro  
 <p style="text-align:justify">Walking is a very basic and indispensable action that is embedded in our daily life. We need to walk to traverse from one place to another. Although it seems to be obvious and too simple, its importance and the level of complexity is taken for granted quite often.</p>
 <p style="text-align:justify">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
 
-## History:
+## History
 <p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
 
 <div class="row">
@@ -22,8 +22,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
         <p style="text-align:justify">
           Our initial approaches were inclined towards the classical approach of <strong>canonical walking functions</strong>, particularly inspired by the works of <a href="http://ames.gatech.edu/" class="md-link"> Dr. Aron D Ames</a> and his team at <a href="https://www.gatech.edu/" class="md-link">Georgia Tech</a> & <a href="http://www.bipedalrobotics.com/" class="md-link">AMBER Lab at Caltech</a>, related to <a href="http://ames.gatech.edu/ijbbr_2014.pdf" class="md-link">human inspired walking</a> frameworks for bipedal walking robots. Canonical walking functions are based on the human gait outputs such as knee & hip joint angles and horizontal distance of the hip during the gait, to formulate the controllers for the robot.
         </p>
-        <!-- <a href="https://github.com/nav74neet/rl_ardrone" class="md-link btn-default btn rbtn">code</a>
-        <a href="https://arxiv.org/abs/1801.05086" class="md-link btn-default btn rbtn">paper</a>
-        <a href="https://www.youtube.com/watch?v=SDqPfhUeoCo&feature=youtu.be" class="md-link btn-default btn rbtn">video</a> -->
-   </div>
+    </div>
 </div>
+
+<p style="text-align:justify"></p>
