--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -25,4 +25,4 @@ tags: reinforcement learning, ddpg, bipedal walking,
     </div>
 </div>
 
-<p style="text-align:justify"></p>
+<p style="text-align:justify">We also decided to delve into a more biologically inspired controllers and came across <strong>CPG</strong>, acronym for <strong>Central Pattern Generators</strong>.</p>
