--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -25,4 +25,4 @@ tags: reinforcement learning, ddpg, bipedal walking,
     </div>
 </div>
 
-<p style="text-align:justify">We also decided to delve into a more biologically inspired controllers and came across <strong>CPG</strong>, acronym for <strong>Central Pattern Generators</strong>.</p>
+<p style="text-align:justify">We also decided to delve into a more biologically inspired controllers and came across <strong>CPG</strong>, acronym for <strong>Central Pattern Generators</strong>.So whats a CPG?. Basically they are biological neural circuits/networks that produce rhythmic outputs (even without the need for rhythmic input). They are the source of the tightly-coupled patterns of neural activity that drive rhythmic motions, for example walking.</p>
