--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -24,5 +24,5 @@ tags: reinforcement learning, ddpg, bipedal walking,
         </p>
     </div>
 </div>
-
-<p style="text-align:justify">We also decided to delve into more biologically inspired controllers and came across <strong>CPG</strong>, acronym for <strong>Central Pattern Generators</strong>. So what's a CPG?. Basically they are biological neuronal circuits that produce rhythmic outputs (even in the absense of rhythmic input or sensory feedback). They are the source of the tightly-coupled patterns of neural activity that drive rhythmic motions, for example walking. We were heavily influenced by the work of <a href="http://www.robots.ox.ac.uk/~gunes/" class="md-link">Atılım Güneş Baydin</a> on "<a href="https://arxiv.org/pdf/0801.0830.pdf" class="md-link">Evolution of central pattern generators for the control of a five-link bipedal walking mechanism</a>". On a brief note this paper describes the approach of determining the connectivity and oscillatory parameters of a CPG network through genetic algorithm optimization techniques.</p>
+<br>
+<p style="text-align:justify">We also decided to delve into more biologically inspired controllers and came across <strong>CPG</strong>, acronym for <strong>Central Pattern Generators</strong>. So what's a CPG?. Basically they are biological neuronal circuits that produce rhythmic outputs (even in the absense of rhythmic input or sensory feedback). They are the source of the tightly-coupled patterns of neural activity that drive rhythmic motions, for example walking. We were heavily influenced by the work of <a href="http://www.robots.ox.ac.uk/~gunes/" class="md-link">Atılım Güneş Baydin</a> on "<a href="https://arxiv.org/pdf/0801.0830.pdf" class="md-link">Evolution of central pattern generators for the control of a five-link bipedal walking mechanism</a>". On a brief note this paper describes the approach of determining the connectivity and oscillatory parameters of a CPG network through genetic algorithm optimization techniques. The CPG model adopted is that of a Matsuoka's half-center oscillator model shown below.</p>
