--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -12,7 +12,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="text-align:justify">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
 
 ## History
-<p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We both were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
+<p style="text-align:justify">While working at the Computational Intelligence Laboratory, at the Aerospace Engineering Division, IISc, I and my colleague Mr. <a href="https://www.linkedin.com/in/ioarun/" class="md-link">Arun Kumar</a> decided to explore the domain of machine learning for applications related to robotics. We were fascinated by the problem of bipedal walking robots and the challenges associated with it's dynamics and stability.</p>
 
 <div class="row">
   <div class="col-md-5">
