--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -34,5 +34,5 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <img class="center" src="{{ site.github.url }}/media/blog/matsuoka_cpg.png"/>
 </div>
 </div>
-### So why not use a simple CPG network for generating walking patterns?
- 
+
+#### So why not use a simple CPG network for generating walking patterns?
