--- a/_posts/2018-11-12-haptics.md
+++ b/_posts/2018-11-12-haptics.md
@@ -10,3 +10,7 @@ tags: force feedback, gazebo, collision models, contact forces, novint falcon,
 <p style="text-align:justify">
 While working on a project of mine, I recently came across a very simple but rather very complex problem. By "<strong>simple</strong>" I meant, for us <strong>humans</strong> it would be a very trivial task. But the same could not be said in the case of a robot, especially a <strong>simulated one</strong>. A lot of constraints are to be considered in terms of the physics of simulation environment like collision models, contact forces that arise due these multibody collisions, etc. This post is sincere effort in sharing my experience with haptics interface in simulation, about what I learnt.   
 </p>
+
+## Whats is haptitcs & why the requirement?
+<p style="text-align:justify">
+In simple terms, haptics refers to any form of interaction we humans have with an external object via the sense of touch.</p>
