--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -36,7 +36,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 
 <!-- ## Reinforcement learning approach. -->
-<p style="text-align:justify"> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: <a href="https://arxiv.org/abs/1807.05924" class="md-link">Kumar, Arun, Navneet Paul, and S. N. Omkar. "Bipedal Walking Robot using Deep Deterministic Policy Gradient." arXiv preprint arXiv:1807.05924 (2018)</a></p>. 
+<p style="text-align:justify"> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: <a href="https://arxiv.org/abs/1807.05924" class="md-link">Kumar, Arun, Navneet Paul, and S. N. Omkar. "Bipedal Walking Robot using Deep Deterministic Policy Gradient." arXiv preprint arXiv:1807.05924 (2018)</a>.</p> 
 
 <p style="text-align:justify">Simulation software framework for the planar bipedal walking robot is opensourced through GitHub <a href="https://github.com/nav74neet/ddpg_biped" class="md-link">here</a>. You can try out recent state of RL or ML algorithms such as <a href="https://blog.openai.com/openai-baselines-ppo/" class="md-link">PPO</a> or  <a href="https://arxiv.org/abs/1502.05477" class="md-link">TRPO</a> for generating walking patterns for the biped robot.</p>
 
