--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -39,7 +39,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 
 ## Results & comparison with an actual human gait.
 
-Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem with the convergence of the training still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.  
+<p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem with the convergence of the training still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
 
 <p style="text-align:justify"> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: Kumar, Arun, Navneet Paul, and S. N. Omkar. "<a href="https://arxiv.org/abs/1807.05924" class="md-link">Bipedal Walking Robot using Deep Deterministic Policy Gradient.</a>" arXiv preprint arXiv:1807.05924 (2018).</p> 
 
