--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -40,10 +40,11 @@ tags: reinforcement learning, ddpg, bipedal walking,
 ## Results & comparison with an actual human gait.
 
 <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem with the convergence of the training still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
+<div class="row">
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
 </div>
-
+</div>
 <p style="text-align:justify"> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: Kumar, Arun, Navneet Paul, and S. N. Omkar. "<a href="https://arxiv.org/abs/1807.05924" class="md-link">Bipedal Walking Robot using Deep Deterministic Policy Gradient.</a>" arXiv preprint arXiv:1807.05924 (2018).</p> 
 
 <p style="text-align:justify">Simulation software framework for the planar bipedal walking robot is opensourced through GitHub <a href="https://github.com/nav74neet/ddpg_biped" class="md-link">here</a>. You can try out recent state of RL or ML algorithms such as <a href="https://blog.openai.com/openai-baselines-ppo/" class="md-link">PPO</a> or  <a href="https://arxiv.org/abs/1502.05477" class="md-link">TRPO</a> for generating walking patterns for the biped robot.</p>
