--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -39,8 +39,10 @@ tags: reinforcement learning, ddpg, bipedal walking,
 
 ## Results & comparison with an actual human gait.
 
-<p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem with the convergence of the training still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
 <div class="row">
+<div class="col-md-7">
+<p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem with the convergence of the training still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
+</div>
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
 </div>
