--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -51,7 +51,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 </div>
 
-<p style="text-align:justify"> 
+<p style="text-align:justify"> The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p> 
 
 ## Research outputs
 
