--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -36,12 +36,16 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 
 ## Reinforcement learning approach.
+<p style="text-align:justify">Humans rely on learning from interaction, repeated trial and errors with small variations  and  finding out what works and what not. Let’s consider an example of a child learning to walk. It tries out various possible movements. It may take several days before it stands stably on its feet let alone walking. In the process of learning to walk, the child is punished by falling and rewarded for moving forward. 
+	<div class="col-md-5">
+      <img class="rimg" src="{{ site.github.url }}/media/blog/baby.gif"/>
+	</div>
+This rewarding system is inherently built into human beings  that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions  that account for bad rewards(e.g.,falling, getting hurt, pain, etc.).</p>
 
 ### Initial learning phase.
 <p style="text-align:justify"> At the initial stages of the learning phase, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
 
 ## Results & comparison with an actual human gait.
-
 <div class="row">
 <div class="col-md-7">
 <p style="text-align:justify"> Our model learned to generate a stable walking gait after roughly over 41 hours of training (using a Nvidia GeForce GTX 1050 Ti GPU). Though the problem of convergence of the learning still persists with the DDPG algorithm, we were able to get a bipedal gait which was similar to that of a human's. The human gait was synthezised & derived using optical motion capture camera setup at the Advanced Flight Simulation Laboratory, Dept. of Aerospace Engineering, IISc. The half-body marker placement convention was adopted while recording the subject's walking gait.</p> 
