--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -37,10 +37,10 @@ tags: reinforcement learning, ddpg, bipedal walking,
 
 ## Reinforcement learning approach.
 <p style="text-align:justify">Humans rely on learning from interaction, repeated trial and errors with small variations  and  finding out what works and what not. Let’s consider an example of a child learning to walk. It tries out various possible movements. It may take several days before it stands stably on its feet let alone walking. In the process of learning to walk, the child is punished by falling and rewarded for moving forward. 
-	<div class="col-md-5">
+	<div class="col-md-2">
       <img class="rimg" src="{{ site.github.url }}/media/blog/baby.gif"/>
 	</div>
-This rewarding system is inherently built into human beings  that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions  that account for bad rewards(e.g.,falling, getting hurt, pain, etc.).</p>
+This rewarding system is inherently built into human beings  that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions  that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This  kind  of  reward based learning  has  been  modelled mathematically and is called Reinforcement learning.A typical reinforcement learning setting consists of an agent interacting with the environment <i>E</i>. After each time step <i>t</i>, the agent receives an observation.</p>
 
 ### Initial learning phase.
 <p style="text-align:justify"> At the initial stages of the learning phase, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
