--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -40,7 +40,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 	<div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/baby.gif"/>
 	</div>
-This rewarding system is inherently built into human beings  that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions  that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This  kind  of  reward based learning  has  been  modelled mathematically and is called Reinforcement learning.A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation.</p>
+This rewarding system is inherently built into human beings  that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions  that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This  kind  of  reward based learning  has  been  modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b>.</p>
 
 ### Initial learning phase.
 <p style="text-align:justify"> At the initial stages of the learning phase, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
