--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -52,7 +52,7 @@ This rewarding system is inherently built into human beings  that motivate us to
 </div>
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
-      <figcaption>Motion capture recording of a human walking gait.</figcaption>
+      <figcaption><font size="2">Motion capture recording of a human walking gait.</font></figcaption>
 </div>
 </div>
 
