--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -32,6 +32,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 <div class="col-md-5">
 <img class="center" src="{{ site.github.url }}/media/blog/matsuoka_cpg.png"/>
+<figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption>
 </div>
 </div>
 
