--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -6,7 +6,7 @@ categories: [rl]
 description: Bipedal walking using Deep Deterministic Policy Gradient.
 tags: reinforcement learning, ddpg, bipedal walking,
 ---
-## Note: This post is under-construction!
+## Caution: This post is under-construction :warning: 
 ## Intro  
 <p style="text-align:justify">Walking is a very basic and indispensable action that is embedded in our daily life. We need to walk to traverse from one place to another. Although it seems to be obvious and too simple, its importance and the level of complexity is taken for granted quite often.</p>
 <p style="text-align:justify">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
