--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -70,7 +70,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 
 ## Research outputs
 
-<p style="text-align:justify"><b>[1]</b> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: <b>Kumar, Arun, Navneet Paul, and S. N. Omkar. "<a href="https://arxiv.org/abs/1807.05924" class="md-link">Bipedal Walking Robot using Deep Deterministic Policy Gradient.</a>" arXiv preprint arXiv:1807.05924 (2018)</b>.</p> 
+<p style="text-align:justify"><b>[1]</b> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: <b>Kumar, Arun, Navneet Paul, and S. N. Omkar. "<a href="https://arxiv.org/abs/1807.05924" class="md-link">Bipedal Walking Robot using Deep Deterministic Policy Gradient.</a>" arXiv:1807.05924 (2018)</b>.</p> 
 
 <p style="text-align:justify"><b>[2]</b> Simulation software framework for the planar bipedal walking robot is opensourced through GitHub <b><a href="https://github.com/nav74neet/ddpg_biped" class="md-link">here</a></b>. You can try out recent state of the art RL algorithms such as <a href="https://blog.openai.com/openai-baselines-ppo/" class="md-link">PPO</a> or  <a href="https://arxiv.org/abs/1502.05477" class="md-link">TRPO</a> for generating walking patterns for the biped robot.</p>
 
