--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Learning to walk using reinforcement learning"
-date:   2018-06-12
+<!-- date:   2018-06-12 -->
 categories: [rl]
 description: Bipedal walking using Deep Deterministic Policy Gradient.
 tags: reinforcement learning, ddpg, bipedal walking,
