--- a/_posts/2018-11-12-haptics.md
+++ b/_posts/2018-11-12-haptics.md
@@ -13,4 +13,4 @@ While working on a project of mine, I recently came across a very simple but rat
 
 ## Whats is haptitcs & why the requirement?
 <p style="text-align:justify">
-In simple terms, haptics refers to any form of interaction we humans have with an external object via the sense of touch.</p>
+In simple terms, <b>haptics</b> refers to any form of <b>interaction</b> we humans have with an external object via <b>sense of touch</b>. Our ability to percieve other objects by feeling them sometimes provides more valuable inputs than any other senses we have.</p>
