--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -62,13 +62,14 @@ This rewarding system is inherently built into human beings that motivate us to 
 </div>
 
 <p style="text-align:justify"> The hip & knee joint rotations of the human subject and the bipedal walker were gathered and the subsequent plots were generated, depicting similarities in patterns.</p>
+
 <!-- <div class="row">
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
 </div> 
 </div> -->
 
-## Research outputs
+## Research outputs & future work
 
 <p style="text-align:justify"><b>[1]</b> The research manuscript detailing our reinforcement learning approach for bipedal walking robot & corresponding results have been documented and can be accessed here: <b>Kumar, Arun, Navneet Paul, and S. N. Omkar. "<a href="https://arxiv.org/abs/1807.05924" class="md-link">Bipedal Walking Robot using Deep Deterministic Policy Gradient.</a>" arXiv:1807.05924 (2018)</b>.</p> 
 
