--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -52,12 +52,17 @@ This rewarding system is inherently built into human beings that motivate us to 
 
 
 ### Initial learning phase.
+<div class="row">
+<div class="col-md-7">
 <p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.
+</p>
+</div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
       <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption>
   </div>
 </p>
+</div>
 
 ## Results & comparison with an actual human gait.
 <div class="row">
