--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -17,7 +17,9 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
-      <figcaption><font size="0.5">Human walking inputs.</font></figcaption>
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
+      Human walking inputs.
+      </p>
   </div>
   <div class="col-md-7">
         <p style="text-align:justify">
@@ -33,7 +35,10 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 <div class="col-md-5">
 <img class="center" src="{{ site.github.url }}/media/blog/matsuoka_cpg.png"/>
-<figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption>
+<p class="image-caption" style="font-size:0.5px; text-align: center;">
+  Half-center oscillator model of CPG.
+</p>
+<!-- <figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption> -->
 </div>
 </div>
 
@@ -57,11 +62,25 @@ This rewarding system is inherently built into human beings that motivate us to 
   <div class="col-md-7">
   <p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.
   </p>
-  </div>
-    <div class="col-md-5">
-        <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
-        <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption>
     </div>
+    <div class="image-wrapper">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/abb.png" title="ABB">
+                    <img src="https://nav74neet.github.io/media/abb.png" alt="ABB" style="border:1px solid black;">
+                </a>
+                <!-- <center> -->
+                <p class="image-caption" style="font-size:14px; text-align:center;">
+                    Anthropomorphic Robot Arm (ARA) at the ABB Robotics Motion Division, Banagalore.
+                </p>
+                <!-- </center> -->
+    </div>
+
+    <!-- <div class="col-md-5">
+        <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
+        <p class="image-caption" style="font-size:0.5px; text-align: center;">
+        The initial "learning to walk" phase.
+        </p>  
+        <!-- <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption> -->
+    </div> -->
 </div>
 
 ## Results & comparison with an actual human gait.
@@ -71,7 +90,10 @@ This rewarding system is inherently built into human beings that motivate us to 
 </div>
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
-      <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
+      <p class="image-caption" style="font-size:0.5px; text-align: center;">
+      Motion capture recording of a human walking gait.
+      </p>
+      <!-- <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption> -->
 </div>
 </div>
 
