--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -17,9 +17,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
-      <p class="image-caption" style="font-size:0.5px; text-align: center;">
-      Human walking inputs.
-      </p>
+      <figcaption><font size="0.5">Human walking inputs.</font></figcaption>
   </div>
   <div class="col-md-7">
         <p style="text-align:justify">
@@ -35,10 +33,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 <div class="col-md-5">
 <img class="center" src="{{ site.github.url }}/media/blog/matsuoka_cpg.png"/>
-<p class="image-caption" style="font-size:0.5px; text-align: center;">
-  Half-center oscillator model of CPG.
-</p>
-<!-- <figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption> -->
+<figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption>
 </div>
 </div>
 
@@ -50,38 +45,18 @@ tags: reinforcement learning, ddpg, bipedal walking,
 This rewarding system is inherently built into human beings that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This kind of reward based learning has been modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b> from the environment and takes action <b><i>a<sub>t</sub></i></b> for which it recieves a scalar reward <b><i>r<sub>t</sub></i></b> & next state <b><i>s<sub>t+1</sub></i></b>.</p>
 
 ### Deep Determinsitic Policy Gradient.
-<p style="txt-align:justify">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p>
+<p style="txt-align:justify">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p> 
 <p>
-<img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="middle">
+<img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" style="border:2px solid black;" align="middle">
 <figcaption><font size="0.5" align="center">Actor-Critic network model.</font></figcaption>
-</p> 
-
+</p>
 
 ### Initial learning phase.
-<div class="row">
-  <div class="col-md-7">
-  <p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.
-  </p>
-    </div>
-    <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/abb.png" title="ABB">
-                    <img src="https://nav74neet.github.io/media/abb.png" alt="ABB" style="border:1px solid black;">
-                </a>
-                <!-- <center> -->
-                <p class="image-caption" style="font-size:14px; text-align:center;">
-                    Anthropomorphic Robot Arm (ARA) at the ABB Robotics Motion Division, Banagalore.
-                </p>
-                <!-- </center> -->
-    </div>
-
-    <!-- <div class="col-md-5">
-        <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
-        <p class="image-caption" style="font-size:0.5px; text-align: center;">
-        The initial "learning to walk" phase.
-        </p>  
-        <!-- <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption> -->
-    </div> -->
-</div>
+<p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
+<p>
+<img src="https://nav74neet.github.io/media/biped_training.gif" alt="DDPG" style="border:2px solid black;" align="middle">
+<figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption>
+</p>
 
 ## Results & comparison with an actual human gait.
 <div class="row">
@@ -90,10 +65,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 </div>
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive.gif"/>
-      <p class="image-caption" style="font-size:0.5px; text-align: center;">
-      Motion capture recording of a human walking gait.
-      </p>
-      <!-- <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption> -->
+      <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
 </div>
 </div>
 
