--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -47,16 +47,21 @@ This rewarding system is inherently built into human beings that motivate us to 
 ### Deep Determinsitic Policy Gradient.
 <p style="txt-align:justify">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p> 
 <p>
-<img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" style="border:2px solid black;" align="middle">
+<img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="center">
 <figcaption><font size="0.5" align="center">Actor-Critic network model.</font></figcaption>
 </p>
 
 ### Initial learning phase.
+<div class="col-md-7">
 <p style="text-align:justify"> At the initial stages of the learning to walk, the robot takes baby steps and eventually fails a lot of times by falling down. The reward function is modelled accordingly by this inference so that the robot moves forward while maintaining constant waist-height from the ground to maximize the reward for each iteration.</p>
-<p>
-<img src="https://nav74neet.github.io/media/biped_training.gif" alt="DDPG" style="border:2px solid black;" align="middle">
+<div class="col-md-5">
+      <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
+      <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
+</div>
+</div>
+<!-- <img src="https://nav74neet.github.io/media/biped_training.gif" alt="DDPG" style="border:2px solid black;" align="middle">
 <figcaption><font size="0.5" align="center">The initial learning phase.</font></figcaption>
-</p>
+</p> -->
 
 ## Results & comparison with an actual human gait.
 <div class="row">
