--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -17,7 +17,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
-      <figcaption><font size="0.5">Human walking inputs.</font></figcaption>
+      <figcaption><font size="0.5">Human walking outputs.</font></figcaption>
   </div>
   <div class="col-md-7">
         <p style="text-align:justify">
