--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -47,12 +47,18 @@ This rewarding system is inherently built into human beings that motivate us to 
 ### Deep Determinsitic Policy Gradient.
 
 <p style="txt-align:justify">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p> 
-<div class="col-md-12">
-      <img class="rimg" src="{{ site.github.url }}/media/blog/ac_network.jpg" alt="AC" align="middle" />
-      <p class="image-caption" style="font-size:10px; text-align: center;">
+ <center>
+            <div class="image-wrapper">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/ac_network.jpg" title="AC">
+                    <img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="middle">
+                </a>
+                <center>
+                <p class="image-caption" style="font-size:14px; text-align:center;">
                     Actor-Critic network model.
-      </p>
-</div>
+                </p>
+                </center>
+            </div>
+</center>
 
 <!-- <img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="AC" align="center">
 <figcaption><font size="0.5" align="center">Actor-Critic network model.</font></figcaption>
