--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -44,12 +44,12 @@ tags: reinforcement learning, ddpg, bipedal walking,
 	<div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/baby.gif"/>
 	</div>
-This rewarding system is inherently built into human beings that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This kind of reward based learning has been modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b> from the environment and takes action <b><i>a<sub>t</sub></i></b> for which it recieves a scalar reward <b><i>r<sub>t</sub></i></b> & next state <b><i>s<sub>t+1</sub></i></b>.
+This rewarding system is inherently built into human beings that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This kind of reward based learning has been modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b> from the environment and takes action <b><i>a<sub>t</sub></i></b> for which it recieves a scalar reward <b><i>r<sub>t</sub></i></b> & next state <b><i>s<sub>t+1</sub></i></b> as seen in figure below.
 </p>
 <center>
             <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl_png" title="AC">
-                    <img src="https://nav74neet.github.io/media/blog/rl_png" alt="AC" align="middle">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl_png" title="RL">
+                    <img src="https://nav74neet.github.io/media/blog/rl_png" alt="RL" align="middle">
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
