--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -48,8 +48,8 @@ This rewarding system is inherently built into human beings that motivate us to 
 </p>
 <center>
             <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl_png" title="RL">
-                    <img src="https://nav74neet.github.io/media/blog/rl_png" alt="RL" align="middle">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl.png" title="RL">
+                    <img src="https://nav74neet.github.io/media/blog/rl.png" alt="RL" align="middle">
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
